--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
-            <h3 class="menu__title">Fulana de Tal</h3>
+            <h3 class="menu__title">Hugo Ángel</h3>
         </header>
         <nav>
             <ul class="menu__list">
@@ -27,22 +27,21 @@
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
+                <li class="menu__list__item"><a href="#contacto">hugo.gonzalez.delossantos@gmail.com</a></li>
             </ul>
-            <li class="menu__list__item__contato"><a href="#contacto">contacto@fulana.com</a></li>
         </nav>
     </section>
 
     <!-- Sección del Header/Title/Hero -->
     <section class="title">
         <div class="title__div">
-            <img class="title__profile" src="assets\profile.png">
+            <img class="title__profile" src="./assets/Copia de profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fulana de Tal y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Hugo Ángel González De Los Santos y construyo paginas web</h2>
+                <h3 class="title__subsection">Soy formado en la Facultad de Ingeniería de la UNAM y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
+                    <li class="title__network__item"><a href="https://github.com/hugogonzalezsantos" target="_blank">Github <img src="assets\arrow.png"> </a></li>
                     <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
                     <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
@@ -165,17 +164,17 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\ufpr_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Análisis de datos</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2018 - UFPR</p></li>
+                    <li class="academic__courses__item__img"><img src="assets/fi-unam.png"></li>
+                    <li class="academic__courses__item__title"><h4>Facultad de Ingeniería UNAM</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2022 - UNAM</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2019 - Alura</p></li>
+                    <li class="academic__courses__item__title"><h4>Formación en FrontEnd</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2024 - Alura</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
@@ -191,7 +190,7 @@
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
-        <h2 class="experience__section__title" >Experiencia Profissional</h2>
+        <h2 class="experience__section__title" >Experiencia Profesional</h2>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\decod_print.png">
@@ -271,8 +270,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
+                <p>Desarrollado por Hugo Ángel González De Los Santos</p>
+                <p>2024</p>
             </div>
         </section>
     </div>
